--- a/src/demo-app/datepicker/datepicker-demo.html
+++ b/src/demo-app/datepicker/datepicker-demo.html
@@ -3,25 +3,26 @@
   <md-checkbox [(ngModel)]="touch">Use touch UI</md-checkbox>
   <md-checkbox [(ngModel)]="filterOdd">Filter odd months and dates</md-checkbox>
   <md-checkbox [(ngModel)]="yearView">Start in year view</md-checkbox>
+  <md-checkbox [(ngModel)]="readOnly">Read-only mode</md-checkbox>
 </p>
 <p>
   <md-input-container>
     <input mdInput [mdDatepicker]="minDatePicker" [(ngModel)]="minDate" placeholder="Min date">
     <button mdSuffix [mdDatepickerToggle]="minDatePicker"></button>
   </md-input-container>
-  <md-datepicker #minDatePicker [touchUi]="touch"></md-datepicker>
+  <md-datepicker #minDatePicker [touchUi]="touch" [readOnly]="readOnly"></md-datepicker>
   <md-input-container>
     <input mdInput [mdDatepicker]="maxDatePicker" [(ngModel)]="maxDate" placeholder="Max date">
     <button mdSuffix [mdDatepickerToggle]="maxDatePicker"></button>
   </md-input-container>
-  <md-datepicker #maxDatePicker [touchUi]="touch"></md-datepicker>
+  <md-datepicker #maxDatePicker [touchUi]="touch" [readOnly]="readOnly"></md-datepicker>
 </p>
 <p>
   <md-input-container>
     <input mdInput [mdDatepicker]="startAtPicker" [(ngModel)]="startAt" placeholder="Start at date">
     <button mdSuffix [mdDatepickerToggle]="startAtPicker"></button>
   </md-input-container>
-  <md-datepicker #startAtPicker [touchUi]="touch"></md-datepicker>
+  <md-datepicker #startAtPicker [touchUi]="touch" [readOnly]="readOnly"></md-datepicker>
 </p>
 
 <h2>Result</h2>
@@ -44,6 +45,7 @@
   <md-datepicker
       #resultPicker
       [touchUi]="touch"
+      [readOnly]="readOnly"
       [startAt]="startAt"
       [startView]="yearView ? 'year' : 'month'">
   </md-datepicker>
@@ -59,6 +61,7 @@
   <md-datepicker
       #resultPicker2
       [touchUi]="touch"
+      [readOnly]="readOnly"
       [startAt]="startAt"
       [startView]="yearView ? 'year' : 'month'">
   </md-datepicker>
