--- a/src/demo-app/stepper/stepper-demo.html
+++ b/src/demo-app/stepper/stepper-demo.html
@@ -1,4 +1,4 @@
 <h2>Horizontal Stepper Demo</h2>
-<mat-stepper>
-    <mat-step></mat-step>
+<mat-stepper [orientation]="horizontal">
+    <mat-step *ngFor="let step of steps" [active]="step.active"></mat-step>
 </mat-stepper>
