--- a/src/demo-app/stepper/stepper-demo.html
+++ b/src/demo-app/stepper/stepper-demo.html
@@ -4,6 +4,10 @@
     <md-input-container>
       <input mdInput placeholder="Answer" [(ngModel)]="step.content">
     </md-input-container>
+    <div>
+      <button md-button mdStepperPrevious>Back</button>
+      <button md-button mdStepperNext>Next</button>
+    </div>
   </mat-step>
 </mat-horizontal-stepper>
 
@@ -14,6 +18,10 @@
     <md-input-container>
       <input mdInput placeholder="Answer" [(ngModel)]="step.content">
     </md-input-container>
+    <div>
+      <button md-button mdStepperPrevious>Back</button>
+      <button md-button mdStepperNext>Next</button>
+    </div>
   </mat-step>
 </mat-horizontal-stepper>
 
@@ -23,5 +31,9 @@
     <md-input-container>
       <input mdInput placeholder="Answer" [(ngModel)]="step.content">
     </md-input-container>
+    <div>
+      <button md-button mdStepperPrevious>Back</button>
+      <button md-button mdStepperNext>Next</button>
+    </div>
   </mat-step>
 </mat-vertical-stepper>
