--- a/src/lib/stepper/stepper-horizontal.html
+++ b/src/lib/stepper/stepper-horizontal.html
@@ -1,28 +1,32 @@
-<div #stepHeader *ngFor="let step of _steps; let i = index; let isLast = last"
-     class="mat-stepper-header" role="tab"
-     [id]="_getStepLabelId(i)"
-     [attr.aria-controls]="_getStepContentId(i)"
-     [attr.aria-selected]="selectedIndex == i"
-     [tabIndex]="_focusIndex == i ? 0 : -1"
-     (click)="step.select()"
-     (keydown)="_onKeydown($event)">
-  <div class="mat-stepper-index">
-    {{i + 1}}
-  </div>
+<div class="mat-horizontal-stepper-header-container">
+  <ng-container *ngFor="let step of _steps; let i = index; let isLast = last">
+    <div #stepHeader class="mat-horizontal-stepper-header"
+         role="tab"
+         [id]="_getStepLabelId(i)"
+         [attr.aria-controls]="_getStepContentId(i)"
+         [attr.aria-selected]="selectedIndex == i"
+         [tabIndex]="_focusIndex == i ? 0 : -1"
+         (click)="step.select()"
+         (keydown)="_onKeydown($event)">
+      <div class="mat-stepper-index">
+        {{i + 1}}
+      </div>
 
-  <div class="mat-stepper-label">
-    <!-- If there is a label template, use it. -->
-    <ng-container *ngIf="step.stepLabel" [ngTemplateOutlet]="step.stepLabel.template">
-    </ng-container>
-    <!-- It there is no label template, fall back to the text label. -->
-    <div *ngIf="!step.stepLabel">{{step.label}}</div>
-  </div>
+      <div class="mat-stepper-label">
+        <!-- If there is a label template, use it. -->
+        <ng-container *ngIf="step.stepLabel" [ngTemplateOutlet]="step.stepLabel.template">
+        </ng-container>
+        <!-- It there is no label template, fall back to the text label. -->
+        <div *ngIf="!step.stepLabel">{{step.label}}</div>
+      </div>
+    </div>
 
-  <div *ngIf="!isLast" class="connector-line"></div>
+    <div *ngIf="!isLast" class="connector-line"></div>
+  </ng-container>
 </div>
 
 <div *ngFor="let step of _steps; let i = index"
-     class="mat-stepper-content" role="tabpanel"
+     class="mat-horizontal-stepper-content" role="tabpanel"
      [id]="_getStepContentId(i)"
      [attr.aria-labelledby]="_getStepLabelId(i)"
      [attr.aria-expanded]="selectedIndex == i">
