Fix focus logic and CSS changes (#6507)

--- a/src/lib/stepper/stepper-horizontal.html
+++ b/src/lib/stepper/stepper-horizontal.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div *ngIf="!isLast" class="mat-connector-line"></div>
+    <div *ngIf="!isLast" class="mat-stepper-horizontal-line"></div>
   </ng-container>
 </div>
 <div class="mat-horizontal-content-container">
