--- a/src/lib/stepper/stepper-horizontal.html
+++ b/src/lib/stepper/stepper-horizontal.html
@@ -1,29 +1,23 @@
 <div class="mat-horizontal-stepper-header-container">
   <ng-container *ngFor="let step of _steps; let i = index; let isLast = last">
-    <div #stepHeader class="mat-horizontal-stepper-header"
-         role="tab"
-         [id]="_getStepLabelId(i)"
-         [attr.aria-controls]="_getStepContentId(i)"
-         [attr.aria-selected]="selectedIndex == i"
-         [tabIndex]="_focusIndex == i ? 0 : -1"
-         (click)="step.select()"
-         (keydown)="_onKeydown($event)">
-      <div class="mat-stepper-index">
-        {{i + 1}}
-      </div>
-
-      <div class="mat-stepper-label">
-        <!-- If there is a label template, use it. -->
-        <ng-container *ngIf="step.stepLabel" [ngTemplateOutlet]="step.stepLabel.template">
-        </ng-container>
-        <!-- It there is no label template, fall back to the text label. -->
-        <div *ngIf="!step.stepLabel">{{step.label}}</div>
-      </div>
-    </div>
-
+    <md-step-header  class="mat-horizontal-stepper-header"
+                     (click)="step.select()"
+                     (keydown)="_onKeydown($event)"
+                     [tabIndex]="_focusIndex == i ? 0 : -1"
+                     [id]="_getStepLabelId(i)"
+                     [attr.aria-controls]="_getStepContentId(i)"
+                     [attr.aria-selected]="selectedIndex == i"
+                     [index]="i"
+                     [icon]="_getIndicatorType(i)"
+                     [label]="step.stepLabel || step.label"
+                     [selected]="selectedIndex == i"
+                     [active]="step.completed || selectedIndex == i"
+                     [optional]="step.optional">
+    </md-step-header>
     <div *ngIf="!isLast" class="mat-stepper-horizontal-line"></div>
   </ng-container>
 </div>
+
 <div class="mat-horizontal-content-container">
   <div *ngFor="let step of _steps; let i = index"
        class="mat-horizontal-stepper-content" role="tabpanel"
