--- a/src/lib/stepper/step-header.html
+++ b/src/lib/stepper/step-header.html
@@ -1,16 +1,17 @@
-<div [class.mat-step-icon]="icon != 'number' || selected"
-     [class.mat-step-icon-not-touched]="icon == 'number' && !selected">
-  <span *ngIf="icon == 'number'">{{index + 1}}</span>
-  <md-icon *ngIf="icon == 'edit'">create</md-icon>
-  <md-icon *ngIf="icon == 'done'">done</md-icon>
+<div [class.mat-step-icon]="icon !== 'number' || selected"
+     [class.mat-step-icon-not-touched]="icon == 'number' && !selected"
+     [ngSwitch]="icon">
+  <span *ngSwitchCase="'number'">{{index + 1}}</span>
+  <md-icon *ngSwitchCase="'edit'">create</md-icon>
+  <md-icon *ngSwitchCase="'done'">done</md-icon>
 </div>
-<div [class.mat-step-label-active]="active"
-     [class.mat-step-label-inactive]="!active">
+<div class="mat-step-label"
+     [class.mat-step-label-active]="active">
   <!-- If there is a label template, use it. -->
-  <ng-container *ngIf="_templateLabel" [ngTemplateOutlet]="label.template">
+  <ng-container *ngIf="_templateLabel()" [ngTemplateOutlet]="label.template">
   </ng-container>
   <!-- It there is no label template, fall back to the text label. -->
-  <div class="mat-step-text-label" *ngIf="_stringLabel">{{label}}</div>
+  <div class="mat-step-text-label" *ngIf="_stringLabel()">{{label}}</div>
 
   <div class="mat-step-optional" *ngIf="optional">Optional</div>
 </div>
