--- a/src/e2e-app/e2e-app/e2e-app.html
+++ b/src/e2e-app/e2e-app/e2e-app.html
@@ -18,6 +18,7 @@
   <a md-list-item [routerLink]="['radio']">Radios</a>
   <a md-list-item [routerLink]="['sidenav']">Sidenav</a>
   <a md-list-item [routerLink]="['slide-toggle']">Slide Toggle</a>
+  <a md-list-item [routerLink]="['stepper']">Stepper</a>
   <a md-list-item [routerLink]="['tabs']">Tabs</a>
   <a md-list-item [routerLink]="['cards']">Cards</a>
   <a md-list-item [routerLink]="['toolbar']">Toolbar</a>
